# bridle-ctl

./: .gitignore  ADD_NEW_TOOLS.md  AGENT_GUIDELINES.md  ARCHITECTURE.md  Cargo.toml  Makefile  PLAN.md  README.md  ROADMAP.md  SKILLS.md  USAGE.md  alpine.Dockerfile  bridle-tools.toml  clippy.toml  debian.Dockerfile  docker-compose.yml  make.bat  mkdocs.yml
.bridle-plugins/: cdd-error-percolator.toml  cdd-extern-c.toml  cdd-gnu-standardizer.toml  cdd-msvc-port.toml  cdd-safe-crt.toml  go-auto-err-handling.toml  lib2notebook2lib.toml  py-grade-up.toml  type-correct.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bridle-agent/: Cargo.toml  SKILL.md
bridle-agent/src/: agent_loop.rs  error.rs  lib.rs  main.rs  mcp.rs  simulation.rs  team_simulation.rs
bridle-cli/: Cargo.toml  test_unhandled.go
bridle-cli/src/: batch_executor.rs  batch_fix.rs  batch_pipeline.rs  db.rs  error.rs  forge_mutator.rs  ingest.rs  lib.rs  main.rs  pr_templating.rs  runner.rs  sync_prs.rs  tui.rs  workspace.rs
bridle-cli/src/tools/: cdd.rs  config.rs  dynamic.rs  ffi_tool.rs  mod.rs  registry.rs
bridle-models/: Cargo.toml
bridle-models/src/: lib.rs  models.rs  schema.rs
bridle-rest/: Cargo.toml  tests_rest.rs
bridle-rest/src/: error.rs  main.rs
bridle-rpc/: Cargo.toml
bridle-rpc/src/: error.rs  main.rs
bridle-sdk/: Cargo.toml  build.rs
bridle-sdk/migrations/2026-04-07-000000_create_core_tables/: up.sql
bridle-sdk/migrations/2026-04-07-061241-0000_create_keys_table/: up.sql
bridle-sdk/migrations/2026-04-07-061241-0001_create_social_tables/: down.sql  up.sql
bridle-sdk/migrations/2026-04-07-061855-0000_create_org_and_repo_memberships/: down.sql  up.sql
bridle-sdk/migrations/2026-04-07-062100-0000_create_issues_and_milestones/: up.sql
bridle-sdk/migrations/2026-04-07-062243-0000_create_prs_releases_webhooks/: down.sql  up.sql
bridle-sdk/migrations/2026-04-07-062353-0000_create_git_internals/: up.sql
bridle-sdk/migrations/2026-04-07-062607-0000_add_branch_protection_and_merge_strategies/: down.sql  up.sql
bridle-sdk/migrations/2026-04-08-093836-0000_create_batch_jobs_and_tasks/: up.sql
bridle-sdk/migrations_pg/2026-04-07-000000_create_core_tables/: down.sql  up.sql
bridle-sdk/migrations_pg/2026-04-07-061241-0000_create_keys_table/: up.sql
bridle-sdk/migrations_pg/2026-04-07-061241-0001_create_social_tables/: up.sql
bridle-sdk/migrations_pg/2026-04-07-061855-0000_create_org_and_repo_memberships/: up.sql
bridle-sdk/migrations_pg/2026-04-07-062100-0000_create_issues_and_milestones/: down.sql  up.sql
bridle-sdk/migrations_pg/2026-04-07-062243-0000_create_prs_releases_webhooks/: up.sql
bridle-sdk/migrations_pg/2026-04-07-062353-0000_create_git_internals/: down.sql  up.sql
bridle-sdk/migrations_pg/2026-04-07-062607-0000_add_branch_protection_and_merge_strategies/: up.sql
bridle-sdk/migrations_pg/2026-04-08-093836-0000_create_batch_jobs_and_tasks/: down.sql  up.sql
bridle-sdk/src/: batch_db.rs  cdd_stub.c  db.rs  encoding.rs  error.rs  ffi.rs  file_lock.rs  lib.rs  models.rs  path_scope.rs  pipeline.rs  schema.rs  telemetry.rs
bridle-sdk/tests/: schema_parity.rs
bridle-ui/: README.md  angular.json  check_cov.js  check_dir.js  check_docs.js  check_input.js  eslint.config.js  karma.conf.js  package-lock.json  package.json  playwright.config.ts  server.ts
bridle-ui/compodoc-out/: documentation.json
bridle-ui/documentation/js/routes/: routes_index.js
bridle-ui/src/: index.html  main.server.ts  styles.css
bridle-ui/src/app/: app.component.spec.ts  app.component.ts  app.config.server.ts  app.config.ts  app.routes.ts
bridle-ui/src/app/core/models/: models.ts
bridle-ui/src/app/core/services/: api.service.spec.ts  api.service.ts  batch.service.spec.ts  batch.service.ts  local-op.service.spec.ts  local-op.service.ts  notification.service.spec.ts  notification.service.ts  org.service.spec.ts  org.service.ts  pr.service.spec.ts  pr.service.ts  system-state.service.spec.ts  system-state.service.ts
bridle-ui/src/app/core/store/: jobs.store.spec.ts  jobs.store.ts  prs.store.spec.ts  prs.store.ts
bridle-ui/src/app/features/batch/batch-actions-page/: batch-actions-page.component.spec.ts  batch-actions-page.component.ts
bridle-ui/src/app/features/batch/batch-fix-form/: batch-fix-form.component.spec.ts  batch-fix-form.component.ts
bridle-ui/src/app/features/batch/batch-job-detail/: batch-job-detail.component.spec.ts  batch-job-detail.component.ts
bridle-ui/src/app/features/batch/batch-jobs-list/: batch-jobs-list.component.spec.ts  batch-jobs-list.component.ts
bridle-ui/src/app/features/batch/batch-run-form/: batch-run-form.component.spec.ts  batch-run-form.component.ts
bridle-ui/src/app/features/dashboard/: dashboard.component.spec.ts  dashboard.component.ts
bridle-ui/src/app/features/dev/dev-tools/: dev-tools.component.spec.ts  dev-tools.component.ts
bridle-ui/src/app/features/local-ops/local-audit/: local-audit.component.spec.ts  local-audit.component.ts
bridle-ui/src/app/features/local-ops/local-fix/: local-fix.component.spec.ts  local-fix.component.ts
bridle-ui/src/app/features/local-ops/local-ops-page/: local-ops-page.component.spec.ts  local-ops-page.component.ts
bridle-ui/src/app/features/orgs/ingest-org-form/: ingest-org-form.component.spec.ts  ingest-org-form.component.ts
bridle-ui/src/app/features/orgs/org-list/: org-list.component.spec.ts  org-list.component.ts
bridle-ui/src/app/features/orgs/orgs-page/: orgs-page.component.spec.ts  orgs-page.component.ts
bridle-ui/src/app/features/orgs/repo-list/: repo-list.component.spec.ts  repo-list.component.ts
bridle-ui/src/app/features/prs/pr-sync/: pr-sync.component.spec.ts  pr-sync.component.ts
bridle-ui/src/app/shared/ui/app-badge/: app-badge.component.spec.ts  app-badge.component.ts
bridle-ui/src/app/shared/ui/app-button/: app-button.component.spec.ts  app-button.component.ts
bridle-ui/src/app/shared/ui/app-input/: app-input.component.spec.ts  app-input.component.ts
bridle-ui/tests/: app.spec.ts
docs/: index.md
(+10 files in other folders)
