[package]
name = "bridle-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
bridle-cli = { version = "0.1.0", path = "../bridle-cli" }
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk" }
derive_more = { version = "1.0.0", features = ["display", "from", "error"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"



[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
