[package]
name = "bridle-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
bridle-cli = { version = "0.1.0", path = "../bridle-cli" }
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk" }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }



[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
