[package]
name = "bridle-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk" }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from", "error"] }
ignore = "0.4.25"
indicatif = "0.18.4"
inquire = "0.9.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
chrono = "0.4.44"
tempfile = "3.27.0"
