[package]
name = "bridle-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk" }
chrono = "0.4.44"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "1.0.0", features = ["display", "from", "error"] }
diesel = "2.3.7"
ignore = "0.4.25"
indicatif = "0.18.4"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.1"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
chrono = "0.4.44"
tempfile = "3.27.0"


[lints]
workspace = true
