[package]
name = "bridle-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk", features = ["sqlite", "postgres"] }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { workspace = true }
diesel = "2.3.7"
ignore = "0.4.25"
indicatif = "0.18.4"
libloading = "0.9.0"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tera = "1.20.1"
tokio = { workspace = true }
toml = "1.1.2"
tracing = { workspace = true }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
chrono = { workspace = true }
serial_test = "3.4.0"
tempfile = { workspace = true }


[lints]
workspace = true

[features]
default = ["sqlite", "postgres"]
sqlite = []
postgres = []
