[package]
name = "bridle-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
bridle-agent = { version = "0.1.0", path = "../bridle-agent" }
bridle-cli = { version = "0.1.0", path = "../bridle-cli" }
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk" }
chrono = { workspace = true }
derive_more = { workspace = true }
serde_json = { workspace = true }
utoipa = { version = "5.1", features = ["actix_extras"] }


[lints]
workspace = true

[dev-dependencies]
serial_test = "3.4.0"
