[package]
name = "bridle-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
bridle-agent = { version = "0.1.0", path = "../bridle-agent" }
bridle-cli = { version = "0.1.0", path = "../bridle-cli" }
bridle-sdk = { version = "0.1.0", path = "../bridle-sdk" }
derive_more = { workspace = true }
jsonrpsee = { version = "0.24", features = ["client", "server"] }
tokio = { workspace = true }

[dev-dependencies]
jsonrpsee = { version = "0.24", features = ["http-client"] }


[lints]
workspace = true
