[package]
name = "bridle-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "from", "error"] }
diesel = { version = "2.2", features = ["chrono", "postgres", "sqlite"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
fs4 = "0.13.1"
globset = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[dev-dependencies]
encoding_rs_io = "0.1.7"
tempfile = "3.27.0"


[lints]
workspace = true
