[package]
name = "bridle-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
bridle-models = { version = "0.1.0", path = "../bridle-models" }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
diesel = { version = "2.2", features = ["chrono"] }
diesel_migrations = { version = "2.3.1" }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
fs4 = "0.13.1"
globset = "0.4.18"
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[dev-dependencies]
encoding_rs_io = "0.1.7"
tempfile = { workspace = true }


[lints]
workspace = true

[features]
default = ["sqlite", "postgres"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
